<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bookBox"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/list_box"
    android:paddingStart="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:weightSum="7">


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/bookTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:gravity="center_vertical"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:text="@string/bookTitle"
        android:textColor="@android:color/black"

        android:textSize="16sp"

        app:autoSizeMaxTextSize="100dp"
        app:autoSizeMinTextSize="16dp"


        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/bookAuthor"
        app:layout_constraintEnd_toStartOf="@id/rightGuide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="2" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/bookAuthor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:foregroundGravity="center_vertical"

        android:gravity="center_vertical"
        android:paddingStart="18dp"
        android:paddingEnd="6dp"
        android:text="@string/bookAuthor"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:autoSizeMaxTextSize="80dp"
        app:autoSizeMinTextSize="14dp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/bookGenre"
        app:layout_constraintEnd_toStartOf="@id/rightGuide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookTitle"
        app:layout_constraintVertical_weight="1" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/bookGenre"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:foregroundGravity="center_vertical"
        android:gravity="center_vertical"

        android:paddingStart="18dp"
        android:paddingEnd="6dp"
        android:text="@string/bookGenre"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:autoSizeMaxTextSize="80dp"
        app:autoSizeMinTextSize="14dp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/rightGuide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookAuthor"
        app:layout_constraintVertical_weight="1" />


    <android.support.constraint.Guideline
        android:id="@+id/rightGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".8" />

    <CheckBox
        android:id="@+id/deleteBook"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:buttonTint="@android:color/holo_red_dark"
        android:focusable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/rightGuide"
        app:layout_constraintTop_toBottomOf="@id/updateBook" />

    <ImageButton
        android:id="@+id/updateBook"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/transparent"
        android:contentDescription="@string/image"
        android:onClick="editBook"
        android:padding="10dp"
        android:scaleType="centerInside"
        android:src="@drawable/update2"
        app:layout_constraintBottom_toTopOf="@id/deleteBook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/rightGuide"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/update2" />


</android.support.constraint.ConstraintLayout>